gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-lifetime-capture-rules-2024_dg.rs
fn foo(x: &Vec<i32>) -> impl Sized {
    x
// { dg-error ".E0700." "" { target *-*-* } .-1 }
}

fn main() {}

